<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llWifisetting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp">

        <ImageView
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:background="@mipmap/confirmation" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_7sdp"
            android:text="@string/information"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/toolbar_bg"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/toolbar_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_5sdp"
        android:padding="@dimen/_10sdp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/module_registration_date"
            android:textColor="@color/toolbar_bg"
            android:textSize="@dimen/_13sdp" />


        <TextView
            android:id="@+id/createdOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:gravity="center_horizontal"
            android:text="@string/module_registration_date_example"
            android:textColor="@color/toolbar_bg"
            android:textSize="@dimen/_13sdp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/model_name_information"
            android:textColor="@color/toolbar_bg"
            android:textSize="@dimen/_13sdp" />


        <TextView
            android:id="@+id/modulename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:gravity="center_horizontal"
            android:text="@string/module_name_example"
            android:textColor="@color/toolbar_bg"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="@dimen/_13sdp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/modelLocation"
            android:textColor="@color/toolbar_bg"
            android:textSize="@dimen/_13sdp" />


        <TextView
            android:id="@+id/moduleid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:gravity="center_horizontal"
            android:text="@string/unknown"
            android:textColor="@color/toolbar_bg"
            android:textSize="@dimen/_13sdp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/toolbar_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialog_confirmation_selector"
            android:text="@string/ok"
            android:textColor="@drawable/button_text_selector"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>