<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llWifisetting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background_white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/wifi_titletxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/wifi_name"
        android:textColor="@color/toolbar_bg"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/toolbar_bg" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_19sdp"
        android:padding="@dimen/_5sdp"
        android:text="@string/password"
        android:textColor="@color/toolbar_bg"
        android:textSize="@dimen/_15sdp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:background="@drawable/roundedcorner_darkbluebackground_10dp"
        android:hint="@string/enter_wifi_password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/_15sdp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/wifi_texthint_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_5sdp">

        <ImageView
            android:id="@+id/showimg"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_gravity="center"
            android:clickable="true"
            android:padding="@dimen/_4sdp"
            android:src="@mipmap/showpwd" />

        <TextView
            android:id="@+id/show"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_8sdp"
            android:gravity="center_vertical"
            android:text="@string/show_password"
            android:textColor="@color/toolbar_bg"
            android:textSize="@dimen/_13sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_5sdp">

        <ImageView
            android:id="@+id/saveimg"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_gravity="center"
            android:clickable="true"
            android:padding="@dimen/_4sdp"
            android:src="@mipmap/showpwd" />

        <TextView
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_8sdp"
            android:gravity="center_vertical"
            android:text="@string/save_password"
            android:textColor="@color/toolbar_bg"
            android:textSize="@dimen/_13sdp" />
    </LinearLayout>



    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/toolbar_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/confirmation_left_button_selector"
            android:text="@string/cancel"
            android:textColor="@drawable/button_text_selector"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/toolbar_bg" />

        <Button
            android:id="@+id/btn_enter_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/confirmation_right_button_selector"
            android:text="@string/Confirm"
            android:textColor="@drawable/button_text_selector"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>