<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llWifisetting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        >

        <ImageView
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:background="@mipmap/confirmation" />

        <TextView
            android:id="@+id/message_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_7sdp"
            android:layout_gravity="center_horizontal"
            android:text="@string/delete"
            android:textColor="@color/toolbar_bg"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/toolbar_bg" />

    <TextView
        android:id="@+id/message_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center"
        android:padding="@dimen/_20sdp"
        android:text="@string/delete_message"
        android:textColor="@color/toolbar_bg"
        android:textSize="@dimen/_18sdp"
        />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/toolbar_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/confirmation_left_button_selector"
            android:text="@string/no"
            android:textStyle="bold"
            android:textSize="@dimen/_14sdp"
            android:textColor="@drawable/button_text_selector" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/toolbar_bg" />

        <Button
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/confirmation_right_button_selector"
            android:text="@string/yes"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:textColor="@drawable/button_text_selector" />


    </LinearLayout>

</LinearLayout>